--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,15 @@
 
 		<!-- Bootstrap flavored page setup -->
 		<div class="col-xs-10 col-xs-offset-1" id="main-body">
-			<h1 align="center">Hello, World!</h1>
+			<h1 align="center">Scriptr</h1>
+			<a href="html/page.html">
+			<li>
+			<p>
+				New Script
+			</p>
+			</li> </a>
 		</div>
+		
 
 	</body>
 
