Websockets for front and back end.

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 		<link href="css/style.css" rel="stylesheet">
 
 		<!-- Page Script -->
-		<script src="js/script.js"></script>
+		<script src="js/doc_socket.js"></script>
 	</head>
 
 	<body>
