Fixed the duplication bug and attempted cleanign stuff up. Will need to refactor a lot of things, but the core functionality is there.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+
+
+	
 	<link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -23,6 +27,9 @@
 
 		<textarea id='scriptBox' rows="30" cols="150"></textarea>
 		<textarea id='scriptBox2' rows="30" cols="150"></textarea>
-</body>
+</body
+
+<script src="js/dj_changes.js"></script>
 <script src="js/scriptrMain.js"></script>
+<script src="js/doc_socket.js"></script>
 </html>
