--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-	<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>
-	<meta charset="utf-8">
-	<title>Scriptr</title> 
-	<meta name="description" content="">
+<html lang="en">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<head>
+		<!---- Universal ---->
+		<meta charset="utf-8">
+		<title>Page Title</title>
 
+		<!-- Define a viewport to mobile devices to use : sets initial zoom -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+		<!-- Page Description -->
+		<meta name="description" content="">
 
-	
-	<link href="css/style.css" rel="stylesheet">
+		<!---- Offsite Inclusions ---->
+		<!-- Done first for dependancy reasons -->
 
-</head>
+		<!-- JQuery CDN -->
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
-<body>
+		<!-- Bootstrap CDN Links -->
+		<!-- Latest compiled and minified CSS and JavaScript -->
+		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
+		<!---- On Site Inclusions ---->
+		<!-- Site Stylesheet -->
+		<link href="css/style.css" rel="stylesheet">
+
+		<!-- Page Scripts -->
+		<script src="js/xxhash.min.lmd.js"></script>
+		<script src="js/changes.js"></script>
+		<script src="js/socket.js"></script>
+		<script src="js/client_app.js"></script>
+
+	</head>
+
+	<body>
+
+		<!-- Bootstrap flavored page setup -->
 		<div class="col-xs-10 col-xs-offset-1" id="main-body">
 			<h1 align="center">Scriptr</h1>
+			<textarea id='scriptBox' rows="30" cols="80"></textarea>
 		</div>
 
-		<textarea id='scriptBox' rows="30" cols="150"></textarea>
-		<textarea id='scriptBox2' rows="30" cols="150"></textarea>
-</body
+		
 
-<script src="js/dj_changes.js"></script>
-<script src="js/scriptrMain.js"></script>
-<script src="js/doc_socket.js"></script>
+	</body>
+
 </html>
