--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,13 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 		<!-- Bootstrap CDN Links -->
-		<!-- Latest compiled and minified CSS and JavaScript -->
-		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 
 		<!---- On Site Inclusions ---->
 		<!-- Site Stylesheet -->
@@ -32,6 +36,7 @@
 		<script src="js/xxhash.min.lmd.js"></script>
 		<script src="js/changes.js"></script>
 		<script src="js/socket.js"></script>
+		<script src="js/document.js"></script>
 		<script src="js/client_app.js"></script>
 
 	</head>
@@ -39,12 +44,37 @@
 	<body>
 
 		<!-- Bootstrap flavored page setup -->
-		<div class="col-xs-10 col-xs-offset-1" id="main-body">
-			<h1 align="center">Scriptr</h1>
-			<textarea id='scriptBox' rows="30" cols="80"></textarea>
+		<div class="container-fluid">
+
+			<div class="row" id="header-row">
+				<h1 align="left">Scriptr</h1>
+			</div>
+
+			<div class="row" id="content-row">
+
+				<!-- Filler -->
+				<div class="col-sm-1"></div>
+
+				<!-- Main Content -->
+				<div class="col-sm-9" id="main-body">
+					<h3 align="center">Doc Title</h3>
+					<textarea id="input-box"><span style="color:red">Hello</span></textarea>
+				</div>
+
+				<!-- Side Bar -->
+				<div class="col-sm-2" id="side-bar">
+					<div class="row">
+						<h1 align="center">Stuff</h1>
+					</div>
+					<div class="row chat-box">
+						<h1 align="center">Chat</h1>
+					</div>
+				</div>
+
+			</div>
+
 		</div>
 
-		
 
 	</body>
 
