Adjustments to page layout.

--- a/public/index.html
+++ b/public/index.html
@@ -53,22 +53,25 @@
 			<div class="row" id="content-row">
 
 				<!-- Filler -->
-				<div class="col-sm-1"></div>
 
 				<!-- Main Content -->
-				<div class="col-sm-9" id="main-body">
+				<div class="col-xs-10" id="main-body">
 					<h3 align="center">Doc Title</h3>
-					<textarea id="input-box"><span style="color:red">Hello</span></textarea>
+					<textarea id="document-box"></textarea>
 				</div>
 
 				<!-- Side Bar -->
-				<div class="col-sm-2" id="side-bar">
-					<div class="row">
+				<div class="col-xs-2" id="side-bar">
+
+					<div class="row" id="stuff-box">
 						<h1 align="center">Stuff</h1>
 					</div>
-					<div class="row chat-box">
+
+					<!-- Chat Box -->
+					<div class="row" id="chat-box">
 						<h1 align="center">Chat</h1>
 					</div>
+
 				</div>
 
 			</div>
