--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,12 @@
 					<!-- Chat Box -->
 					<div class="row" id="chat-box">
 						<h1 align="center">Chat</h1>
+						<div id="chat-field">
+							Hello
+						</div>
+
+						<input id="chat-input" type="text" size="5">
+
 					</div>
 
 				</div>
