--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
 		<script src="js/xxhash.min.lmd.js"></script>
 		<script src="js/changes.js"></script>
 		<script src="js/socket.js"></script>
+		<script src="js/text_formatter.js"></script>
 		<script src="js/document.js"></script>
 		<script src="js/client_app.js"></script>
 
@@ -57,7 +58,7 @@
 				<!-- Main Content -->
 				<div class="col-xs-10" id="main-body">
 					<h3 align="center">Doc Title</h3>
-					<textarea id="document-box"></textarea>
+					<div contenteditable id="document-box"><div><br></div></div>
 				</div>
 
 				<!-- Side Bar -->
