Cursor problems persist, although the contenteditable div works really well.
Likely going to try the hidden textarea idea next

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
 
 		<!-- Page Scripts -->
 		<script src="js/xxhash.min.lmd.js"></script>
+		<script src="js/jcaret.js"></script>
 		<script src="js/changes.js"></script>
 		<script src="js/socket.js"></script>
 		<script src="js/text_formatter.js"></script>
