--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<!---- Universal ---->
 		<meta charset="utf-8">
-		<title>Page Title</title>
+		<title>Scriptr</title>
 
 		<!-- Define a viewport to mobile devices to use : sets initial zoom -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,11 +30,11 @@
 
 		<!---- On Site Inclusions ---->
 		<!-- Site Stylesheet -->
-		<link href="css/style.css" rel="stylesheet">
+		<link href="css/test.css" rel="stylesheet">
+
 
 		<!-- Page Scripts -->
 		<script src="js/xxhash.min.lmd.js"></script>
-		<script src="js/jcaret.js"></script>
 		<script src="js/changes.js"></script>
 		<script src="js/socket.js"></script>
 		<script src="js/text_formatter.js"></script>
@@ -65,18 +65,23 @@
 				<!-- Side Bar -->
 				<div class="col-xs-2" id="side-bar">
 
-					<div class="row" id="stuff-box">
+					<div class="row" id="stuff-box" align="center">
 						<h1 align="center">Stuff</h1>
+
+						<button type="button" class="btn btn-default">New</button>
+						<button type="button" class="btn btn-default">Save</button>
+						<button type="button" class="btn btn-default">Download</button>
 					</div>
 
 					<!-- Chat Box -->
 					<div class="row" id="chat-box">
-						<h1 align="center">Chat</h1>
-						<div id="chat-field">
-							Hello
-						</div>
 
-						<input id="chat-input" type="text" size="5">
+						<h1 align="center">Chat</h1>
+
+						<div>Sup</div>
+						<div class="other">Hey</div>
+						<div>Want a Cookie?</div>
+						<div class="other">Yeah</div>
 
 					</div>
 
