Textarea and cursor syncing

--- a/public/index.html
+++ b/public/index.html
@@ -60,14 +60,14 @@
 				<!-- Filler -->
 				<div class="col-xs-1" id="control-box">
 					<div id="control-pane">
-						<img src="http://placehold.it/25x25">
 					</div>
 				</div>
 
 				<!-- Main Content -->
 				<div class="col-xs-9" id="main-box">
 
-					<div contenteditable id="document-pane"><div><br></div></div>
+					<textarea cols="100" rows="100" id="document-pane"></textarea>
+					<!-- <div class="col-xs-5" id="document-display"> Hey </div> -->
 
 				</div>
 
