--- a/public/index.html
+++ b/public/index.html
@@ -76,15 +76,17 @@
 				<!-- Chat Box -->
 				<div class="col-xs-2" id="side-box" align="center">
 					<div id="chat-pane" align="right">
-
-						<div id="chat-window" align="left"></div>
-						<input id="chat-input"/>
-
+						<div id="joined-users-box" align="left">
+							<p>There will be user names here</p>
+						</div>
 						<div id="chat-name-box">
 							<p>Name</p>
 							<input id="chat-name"/>
 						</div>
-
+						<div id="chat-window" align="left"></div>
+						<div id="chat-input-box" align="right">
+								<input id="chat-input"/>
+						</div>
 					</div>
 				</div>
 			</div>
