--- a/public/html/index.html
+++ b/public/html/index.html
@@ -70,6 +70,7 @@
 						<li><span><input id="new-button" type="image" src="images/NewFile.png" /></span></li>
 						<li><span><input id="save-button" type="image" src="images/SaveFile.png" /></span></li>
 						<li><span><input id="download-button" type="image" src="images/DownloadFile.png" /></span></li>
+
 					</ul>
 				</div>
 
@@ -84,36 +85,40 @@
 
 				<!-- Chat Box -->
 				<div class="col-xs-2" id="side-box">
+
 					<div id="chat-pane">
-						<div id="joined-users-box">
-							<ul>
-								<li><span>User</span></li>
-								<li><span>User</span></li>
-								<li><span>User</span></li>
+						<div id="joined-users-box" align="center">
+							<h1>Users</h1>
 
+							<div id="chat-name-box">
+								<input id="chat-name"/>
+							</div>
+
+							<div id="joined-users-list" align="left">
+								<ul>
 									<li><span>User</span></li>
 									<li><span>User</span></li>
 									<li><span>User</span></li>
-
-										<li><span>User</span></li>
-										<li><span>User</span></li>
-										<li><span>User</span></li>
-
-											<li><span>User</span></li>
-											<li><span>User</span></li>
-											<li><span>User</span></li>
-							</ul>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+									<li><span>User</span></li>
+								</ul>
+							</div>
 
 						</div>
-						<div id="chat-name-box">
-							<p>Name</p>
-							<input id="chat-name"/>
-						</div>
+
 						<div id="chat-window"></div>
 						<div id="chat-input-box">
 								<input id="chat-input"/>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
