--- a/public/html/index.html
+++ b/public/html/index.html
@@ -33,7 +33,6 @@
 		<link href="css/test.css" rel="stylesheet">
 
 
-
 		<!-- Page Scripts -->
 		<script type="text/javascript">
 			var DOCUMENT_PORT = {{document_port}};
@@ -64,7 +63,7 @@
 			<div class="row" id="content-row">
 
 				<!-- Controls -->
-				<div class="col-xs-1" id="control-box">
+				<div class="col-xs-1" id="control-col">
 					<ul id="control-pane">
 
 						<li><span><input id="new-button" type="image" src="images/NewFile.png" /></span></li>
@@ -75,50 +74,44 @@
 				</div>
 
 				<!-- Main Content -->
-				<div class="col-xs-9" id="main-box">
+				<div class="col-xs-9" id="document-col">
 
-					<div id="document-container">
-						<textarea id="document-pane"></textarea>
+					<div id="document-pane">
+						<textarea id="document-textarea"></textarea>
 					</div>
 
 				</div>
 
 				<!-- Chat Box -->
-				<div class="col-xs-2" id="side-box">
-
-					<div id="chat-pane">
-						<div id="joined-users-box" align="center">
-							<h1>Users</h1>
-
-							<div id="chat-name-box">
-								<input id="chat-name"/>
+				<div class="col-xs-2" id="side-col">
+					<div id="side-pane">
+						<div id="user-box">
+							<div align="center">
+								<h1>Users</h1>
 							</div>
+							<div id="user-list">
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
+								<div class="user">Daniel</div>
 
-							<div id="joined-users-list" align="left">
-								<ul>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-									<li><span>User</span></li>
-								</ul>
 							</div>
-
 						</div>
-
-						<div id="chat-window"></div>
-						<div id="chat-input-box">
-								<input id="chat-input"/>
+						<div id="chat-box">
+							<div id="chat-window"></div>
+							<input id="chat-input"/>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
