Front end 85% done
User List is all that needs to be finalized

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -90,20 +90,14 @@
 								<h1>Users</h1>
 							</div>
 							<div id="user-list">
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
-								<div class="user">Daniel</div>
+								<div class="user">- Daniel</div>
+								<div class="user">- Brandon</div>
+								<div class="user">- Daniel</div>
+								<div class="user">- Brandon</div>
+								<div class="user">- Daniel</div>
+								<div class="user">- Brandon</div>
+								<div class="user">- Daniel</div>
+								<div class="user">- Brandon</div>
 
 							</div>
 						</div>
