User box design, font changes, potentially fixed saving bug

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -85,28 +85,27 @@
 				<!-- Chat Box -->
 				<div class="col-xs-2" id="side-col">
 					<div id="side-pane">
+
 						<div id="user-box">
-							<div align="center">
-								<h1>Users</h1>
+							<h1>Users</h1>
+
+							<div id="name-box">
+								<p>Name: </p><input id="chat-name" />
 							</div>
 							<div id="user-list">
-								<div class="user">- Daniel</div>
+								<div class="user" id="this-user"></div>
 								<div class="user">- Brandon</div>
-								<div class="user">- Daniel</div>
-								<div class="user">- Brandon</div>
-								<div class="user">- Daniel</div>
-								<div class="user">- Brandon</div>
-								<div class="user">- Daniel</div>
-								<div class="user">- Brandon</div>
-
 							</div>
 						</div>
+
 						<div id="chat-box">
 							<div id="chat-window"></div>
 							<input id="chat-input"/>
 						</div>
+
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</body>
