Front End Almost Done, User Name Syncing Almost Done

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -94,7 +94,9 @@
 							</div>
 							<div id="user-list">
 								<div class="user" id="this-user"></div>
-								<div class="user">- Brandon</div>
+								<div id="other-users">
+									<div class="user">- Brandon</div>
+								</div>
 							</div>
 						</div>
 
